AO in Eevee causes black outline around objects and hot pixel artificets, #87541

Closed
opened 2021-04-16 00:22:21 +02:00 by Amad Muhammad · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.89

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-15 14:16, hash: a4877f9e54
Worked: (blender_2.92)

Short description of error
AO is not working properly also chage the parameters causes more hot pixel artifects,
Exact steps for others to reproduce the error
Add a sphere add a monkey inside the sphere edit mode , change the metalic value to 1 and enable ao, change AO factor parameter to zero to get the hot pixel images and blend file attached

AO_bug.blend

02.png

01.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.89 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-15 14:16, hash: `a4877f9e54` Worked: (blender_2.92) **Short description of error** AO is not working properly also chage the parameters causes more hot pixel artifects, **Exact steps for others to reproduce the error** Add a sphere add a monkey inside the sphere edit mode , change the metalic value to 1 and enable ao, change AO factor parameter to zero to get the hot pixel images and blend file attached [AO_bug.blend](https://archive.blender.org/developer/F9935338/AO_bug.blend) ![02.png](https://archive.blender.org/developer/F9935337/02.png) ![01.png](https://archive.blender.org/developer/F9935336/01.png)
Author

Added subscriber: @Nakara

Added subscriber: @Nakara

#87469 was marked as duplicate of this issue

#87469 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, might be a duplicate of #87440 (EEVEE - Specular Light Viewport Render Pass Behavior (AO and Screenspace Reflection - Over-Darkening Effect on Metallic Object))

Can confirm, might be a duplicate of #87440 (EEVEE - Specular Light Viewport Render Pass Behavior (AO and Screenspace Reflection - Over-Darkening Effect on Metallic Object))

Added subscriber: @3di

Added subscriber: @3di

Added subscriber: @Dec

Added subscriber: @Dec
Clément Foucault self-assigned this 2021-04-20 00:00:09 +02:00

This issue was referenced by 27cfc1ea11

This issue was referenced by 27cfc1ea11461ca1257657afafb455be0da75cb1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87541
No description provided.