Fix T87541 EEVEE: AO causes black outline around objects and NaN pixels

It seems the pow result is unstable on some implementations.

Also avoid undefined behavior by clamping aoFactor to strict positive values.